Fix scoped labels color regression in dark mode

--- a/app/assets/stylesheets/themes/_dark.scss
+++ b/app/assets/stylesheets/themes/_dark.scss
@@ -207,7 +207,25 @@ $line-removed-dark: $red-200;
 // and for scoped label value (the right section)
 .gl-label-text-light.gl-label-text-light,
 .gl-label-text-dark + .gl-label-text-dark {
-  color: $gray-900;
+  color: #fff;
+}
+
+// This applies to "gl-labels" from "gitlab-ui"
+.gl-label.gl-label-scoped.gl-label-text-dark,
+.gl-label.gl-label-scoped.gl-label-text-light {
+  .gl-label-text-scoped,
+  .gl-label-close {
+    color: #fff;
+  }
+}
+
+// This applies to the gl-label markups
+// rendered and cached in the backend (labels_helper.rb)
+.gl-label.gl-label-scoped {
+  .gl-label-text-scoped,
+  .gl-label-close {
+    color: #fff;
+  }
 }
 
 // duplicated class as the original .atwho-view style is added later
